--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "@studio-freight/react-lenis": "^0.0.45",
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
