--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
